--- a/flipper.css
+++ b/flipper.css
@@ -1,82 +1,64 @@
 .wrap {
-    position: absolute;
+    position:static;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
     display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     justify-content: center;
     margin: auto;
-    height: 310px;
+    margin-top: 5rem;
+    height: auto;
 }
   
   a {
     text-decoration: none;
-    color: #1a1a1a;
+    color: #FFF;
   }
-  
-  h1 {
-    margin-bottom: 60px;
-    text-align: center;
-    font: 300 2.25em "Lato";
-    text-transform: uppercase;
-  }
-  h1 strong {
-    font-weight: 400;
-    color: #ea4c4c;
-  }
-  
-  h2 {
-    margin-bottom: 80px;
-    text-align: center;
-    font: 300 0.7em "Lato";
-    text-transform: uppercase;
-  }
-  h2 strong {
-    font-weight: 400;
-  }
-  
+
   .countdown {
     width: 100%;
+    display: flex;
     justify-content: center;
+    column-gap: 2rem;
     margin: 0 auto;
   }
   .countdown .bloc-time {
-    float: left;
-    margin-right: 45px;
+    /* float: left; */
+    /* margin-right: 45px; */
     text-align: center;
   }
-  .countdown .bloc-time:last-child {
+  /* .countdown .bloc-time:last-child {
     margin-right: 0;
-  }
+  } */
   .countdown .count-title {
     display: block;
-    margin-bottom: 15px;
-    font: normal 0.94em "Lato";
-    color: #1a1a1a;
+    font-size: 0.5rem;
+    color: #FFF;
     text-transform: uppercase;
   }
   .countdown .figure {
     position: relative;
-    float: left;
-    height: 110px;
-    width: 100px;
-    margin-right: 10px;
+    /* float: left; */
+    height: 3rem;
+    width: 3rem;
+    /* margin-right: 10px; */
     background-color: #fff;
     border-radius: 8px;
-    -moz-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
+    /* -moz-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
     -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08); */
   }
-  .countdown .figure:last-child {
+  /* .countdown .figure:last-child {
     margin-right: 0;
-  }
+  } */
   .countdown .figure > span {
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
-    font: normal 5.94em/107px "Lato";
+    font-size: 2rem;
     font-weight: 700;
     color: #de4848;
   }
