--- a/style.css
+++ b/style.css
@@ -70,12 +70,15 @@ body::-webkit-scrollbar {
     position: absolute;
     right: 0;
     bottom: 0;
-    height: 15vh;
-    transform: scaleX(1.1);
+    height: 16vh;
+    transform: scale(1.25);
 }
 
 .container {
-    padding-top: 20vh;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 h1 {
@@ -84,6 +87,22 @@ h1 {
     text-transform: uppercase;
     font-size: 1.25rem;
     letter-spacing: 6px;
+}
+
+footer {
+    position: absolute;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    bottom: 0;
+    width: 100%;
+}
+
+footer img {
+    height: 1.25rem;
+    width: 1.25rem;
 }
 
 @media (min-width:1440px) {
