--- a/flipper.css
+++ b/flipper.css
@@ -5,7 +5,6 @@
     left: 0;
     right: 0;
     display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     justify-content: center;
     margin: auto;
     margin-top: 5rem;
@@ -25,34 +24,28 @@
     margin: 0 auto;
   }
   .countdown .bloc-time {
-    /* float: left; */
-    /* margin-right: 45px; */
+    display: grid;
+    justify-items: center;
     text-align: center;
   }
-  /* .countdown .bloc-time:last-child {
-    margin-right: 0;
-  } */
+  
   .countdown .count-title {
     display: block;
     font-size: 0.5rem;
+    text-align: center;
     color: #FFF;
+    margin-top: 0.75rem;
     text-transform: uppercase;
   }
+
   .countdown .figure {
     position: relative;
-    /* float: left; */
     height: 3rem;
     width: 3rem;
-    /* margin-right: 10px; */
     background-color: #fff;
     border-radius: 8px;
-    /* -moz-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
-    -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08); */
   }
-  /* .countdown .figure:last-child {
-    margin-right: 0;
-  } */
+  
   .countdown .figure > span {
     position: absolute;
     left: 0;
@@ -60,7 +53,7 @@
     margin: auto;
     font-size: 2rem;
     font-weight: 700;
-    color: #de4848;
+    color: hsl(345, 95%, 68%);
   }
   .countdown .figure .top:after, .countdown .figure .bottom-back:after {
     content: "";
